--- a/Collector/res/values/strings.xml
+++ b/Collector/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="database_name">PIGDatabase</string>
+    <string name="title_activity_photo">PhotoActivity</string>
+    <string name="photo">Take a Photo</string>
+    <string name="OK">OK</string>
 
 </resources>
